refactor modules dependencies and update build system libs

--- a/application/gradle.properties
+++ b/application/gradle.properties
@@ -22,10 +22,8 @@ kotlin.code.style=official
 org.gradle.caching=true
 # TODO Return configureondemand on true after fix https://github.com/formatools/forma/issues/50
 org.gradle.configureondemand=false
-org.gradle.vfs.watch=true
-forma.kotlinVersion=1.8.0
-forma.agpVersion=7.4.0-beta02
-
+forma.kotlinVersion=1.8.10
+forma.agpVersion=7.4.2
 org.gradle.unsafe.configuration-cache=true
 org.gradle.unsafe.configuration-cache-problems=warn
 org.gradle.unsafe.configuration-cache.max-problems=5
