--- a/gradle.properties
+++ b/gradle.properties
@@ -1,2 +1,10 @@
-forma.kotlinVersion=1.8.0
-forma.agpVersion=7.4.0
+# Project-wide Gradle settings.
+# IDE (e.g. Android Studio) users:
+# Gradle settings configured through the IDE *will override*
+# any settings specified in this file.
+# For more details on how to configure your build environment visit
+# http://www.gradle.org/docs/current/userguide/build_environment.html
+# Specifies the JVM arguments used for the daemon process.
+# The setting is particularly useful for tweaking memory settings.
+org.gradle.jvmargs=-Xmx2048m -XX:+UseParallelGC
+
