--- a/application/root-app/src/main/AndroidManifest.xml
+++ b/application/root-app/src/main/AndroidManifest.xml
@@ -1,17 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    package="com.stepango.blockme.root.library">
+        xmlns:tools="http://schemas.android.com/tools">
 
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
-        android:name=".SampleApp"
-        android:fullBackupContent="true"
-        android:allowBackup="true"
-        android:extractNativeLibs="false"
-        android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
+            android:name=".SampleApp"
+            android:fullBackupContent="true"
+            android:allowBackup="true"
+            android:extractNativeLibs="false"
+            android:icon="@mipmap/ic_launcher"
+            android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
