--- a/application/root-app/src/main/AndroidManifest.xml
+++ b/application/root-app/src/main/AndroidManifest.xml
@@ -11,12 +11,13 @@
             android:extractNativeLibs="false"
             android:icon="@mipmap/ic_launcher"
             android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
-        android:supportsRtl="true"
-        android:theme="@style/AppTheme"
-        tools:targetApi="m">
-        <activity android:name=".SampleMainActivity"
-                  android:exported="true">
+            android:roundIcon="@mipmap/ic_launcher_round"
+            android:supportsRtl="true"
+            android:theme="@style/AppTheme"
+            tools:targetApi="m">
+        <activity
+                android:name=".SampleMainActivity"
+                android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
